# NDKDemo

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/ygq/ndk/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ygq/ndk/demo/: ExampleUnitTest.kt
day01/: build.gradle.kts
day01/src/androidTest/java/com/ygq/ndk/signature/: ExampleInstrumentedTest.kt
day01/src/main/cpp/: md5.cpp  nativelib.cpp
day01/src/main/java/com/ygq/ndk/signature/: NativeLib.kt
day01/src/main/java/com/ygq/ndk/signature/ui/: MainActivity.kt
day01/src/main/res/layout/: activity_main.xml
day01/src/main/res/values-night/: themes.xml
day01/src/test/java/com/ygq/ndk/signature/: ExampleUnitTest.kt
day02/: build.gradle.kts
day02/src/main/: AndroidManifest.xml
day02/src/main/cpp/: CMakeLists.txt  md5.h  nativelib.cpp
day02/src/main/java/com/ygq/ndk/signature/: NativeLib.kt
day02/src/main/java/com/ygq/ndk/signature/ui/: MainActivity.kt
day02/src/main/res/values/: strings.xml
day03/: build.gradle.kts
day03/src/main/cpp/: nativelib.cpp
day03/src/main/java/com/ygq/ndk/day03/: NativeLib.kt  Student.kt
day03/src/main/java/com/ygq/ndk/day03/ui/: MainActivity.kt
day03/src/main/res/layout/: activity_main.xml
day04/: build.gradle.kts
day04/src/main/cpp/: nativelib.cpp
day04/src/main/java/com/ygq/ndk/day04/: NativeLib.kt  Student.kt
day04/src/main/java/com/ygq/ndk/day04/ui/: MainActivity.kt
day04/src/main/res/layout/: activity_main.xml
day04/src/main/res/values/: strings.xml
day05/: build.gradle.kts
day05/src/main/: AndroidManifest.xml
day05/src/main/cpp/: nativelib.cpp
day05/src/main/java/com/ygq/ndk/day05/: NativeLib.kt
day05/src/main/java/com/ygq/ndk/day05/ui/: FaceDetectActivity.java  MainActivity.kt
day05/src/main/java/com/ygq/ndk/day06/: NativeLib.kt
day05/src/main/java/com/ygq/ndk/day06/ui/: FaceDetectActivity.java  MainActivity.kt
day05/src/main/res/layout/: activity_main.xml
day05/src/main/res/values/: strings.xml
day06/: build.gradle.kts
day06/src/main/cpp/: LinkedList.hpp  log.h  nativelib.cpp
day06/src/main/java/com/ygq/ndk/day06/: NativeLib.kt
day06/src/main/java/com/ygq/ndk/day06/ui/: MainActivity.kt
day06/src/main/res/layout/: activity_main.xml
day06/src/main/res/values/: strings.xml
day07/: build.gradle.kts
day07/src/androidTest/java/com/ygq/ndk/day03/: ExampleInstrumentedTest.kt
day07/src/main/: AndroidManifest.xml
day07/src/main/cpp/: CMakeLists.txt  LinkedList.hpp  log.h  nativelib.cpp
day07/src/main/java/com/ygq/ndk/day07/: BitmapUtil.java  NativeLib.kt
day07/src/main/java/com/ygq/ndk/day07/ui/: MainActivity.kt
day07/src/main/res/layout/: activity_main.xml
day07/src/main/res/values/: strings.xml
day07/src/test/java/com/ygq/ndk/day03/: ExampleUnitTest.kt
day08/: build.gradle.kts
day08/src/main/: AndroidManifest.xml
day08/src/main/cpp/: CMakeLists.txt  nativelib.cpp
day08/src/main/java/com/ygq/ndk/day08/: NativeLib.kt
day08/src/main/java/com/ygq/ndk/day08/ui/: MainActivity.kt
day08/src/main/res/layout/: activity_main.xml
day08/src/main/res/values/: strings.xml
ffmpeg-cmd/: build.gradle.kts
ffmpeg-cmd/src/androidTest/java/com/ygq/ndk/ffmpeg/cmd/: ExampleInstrumentedTest.kt
ffmpeg-cmd/src/main/: AndroidManifest.xml
ffmpeg-cmd/src/main/cpp/: CMakeLists.txt  cmdutils.c  ffmpeg.c  ffmpeg_filter.c  ffmpeg_mod.c  ffmpeg_opt.c  native-lib.cpp  opt_common.h
ffmpeg-cmd/src/main/java/com/ygq/ndk/ffmpeg/cmd/: MainActivity.kt  NativeLib.kt
ffmpeg-cmd/src/main/jniLibs/include/libavutil/: ffversion.h
ffmpeg-cmd/src/main/jniLibs/other/: config.h  ffmpeg.h  sync_queue.h
ffmpeg-cmd/src/main/res/layout/: activity_main.xml
ffmpeg-cmd/src/main/res/values/: strings.xml  themes.xml
ffmpeg-cmd/src/test/java/com/ygq/ndk/ffmpeg/cmd/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
